# improcv

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: release.yml  test.yml
scripts/: verify_release_version.py
src/improcv/: __init__.py  _validation.py  analysis.py  barcode.py  color.py  contours.py  detectors.py  drawing.py  edges.py  features.py  filters.py  hashing.py  hough.py  morphology.py  pixels.py  qrcode.py  quality.py  regions.py  restoration.py  segmentation.py  transforms.py  types.py
src/improcv/_compat/: opencv.py
src/improcv/visualization/: __init__.py  image.py
tests/: conftest.py  test_analysis.py  test_barcode.py  test_color.py  test_compat_opencv.py  test_contours.py  test_detectors.py  test_drawing.py  test_edges.py  test_features.py  test_filters.py  test_hashing.py  test_hough.py  test_morphology.py  test_package_import.py  test_pixels.py  test_qrcode.py  test_quality.py  test_regions.py  test_restoration.py  test_segmentation.py  test_transforms.py  test_types.py  test_validation.py  test_visualization.py
