[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "improcv"
version = "0.1.0a1"
description = "Modern image-processing and computer-vision utilities for Python, NumPy and OpenCV."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Michał Maj" }]
keywords = ["opencv", "image-processing", "computer-vision", "numpy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Typing :: Typed",
]
dependencies = ["numpy>=1.24"]

# improcv does not pin any one OpenCV distribution as a hard runtime
# dependency, to avoid installing a conflicting variant a user already
# has installed under a different name. Choose exactly one:
#   pip install "improcv[cv]"                  # opencv-python
#   pip install "improcv[cv-headless]"         # opencv-python-headless
#   pip install "improcv[cv-contrib]"          # opencv-contrib-python
#   pip install "improcv[cv-contrib-headless]" # opencv-contrib-python-headless
# or install one of the four `opencv-*` packages yourself.
[project.optional-dependencies]
cv = ["opencv-python>=4.9,<6"]
cv-headless = ["opencv-python-headless>=4.9,<6"]
cv-contrib = ["opencv-contrib-python>=4.9,<6"]
cv-contrib-headless = ["opencv-contrib-python-headless>=4.9,<6"]
viz = ["matplotlib>=3.8"]

[project.urls]
Homepage = "https://github.com/michalmaj/improcv"
Repository = "https://github.com/michalmaj/improcv"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.15",
    "pyright>=1.1",
    "opencv-python-headless>=4.9,<6",
    "matplotlib>=3.8",
]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pyright]
include = ["src", "tests", "scripts"]
typeCheckingMode = "basic"
pythonVersion = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"

[tool.hatch.build.targets.wheel]
packages = ["src/improcv"]
